--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
     <title>git-test</title>
 </head>
 <body>
-    <div style="color: yellowgreen;">这是一个测试!</div>
+    <div style="color: yellowgreen;">这是一个测试</div>
 </body>
 </html>
